--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-hbs",
-  "version": "0.1.2-pre",
-  "description": "Express 3 handlebars template engine complete with multple layouts, partials and blocks.",
+  "version": "0.1.3-pre",
+  "description": "Express 3 handlebars template engine complete with multiple layouts, partials and blocks.",
   "keywords": "express3 express handlebars layout partials",
   "main": "index.js",
   "directories": {
@@ -10,13 +10,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "https://github.com/barc/express-hbs",
   "author": "Mario Gutierrez (mario@mgutz.com)",
   "license": "MIT",
   "devDependencies": {
-    "express": "~3.0.0"
+    "express": "~3.0.0",
+    "redis": "~0.8.2"
   },
   "dependencies": {
-    "handlebars": "~1.0.7"
+    "handlebars": "~1.0.7",
+    "async": "~0.1.22"
   }
 }
